# Quantum-CVA

./: .codex  .gitignore  LICENSE.md  README.md  ideal_quantum_cva_estimation.py  pyproject.toml  requirements.txt
MC_benchmark/: CVA_MC.ipynb  benchmark_utils.py  scaling_constants.py
State_prep/qcbm/: state_prep_qcbm.ipynb
cva_pricing_pipeline/market_data/: market_data_loading.py
data/classical_cva_tables/: classical_cva_benchmark.json  classical_cva_benchmark.npz
data/loaded_market_data/: discount_curve.xlsx  div_yields.xlsx  iberdrola_data.xlsx  time_series.xlsx  vol_surfaces.xlsx
data/qcbm/: qcbm_output_distribution.json  qcbm_output_distribution.npz  qcbm_output_distribution_shots.json  qcbm_output_distribution_shots.npz  qcbm_output_distribution_statevector.json  qcbm_output_distribution_statevector.npz  training_results.npz
hardware_calibration/: compare_calibration_models.py  decoherence_calibration.py  t_calibration_improved_likelihood_profile.csv  t_calibration_improved_results.csv
hardware_calibration/model_comparison/: model_ranking.csv  pointwise_fits.csv
notebooks/classical_benchmark/: classicalCVA_MC.ipynb
plots/: make_ae_cva_hardware_noiseless_final_error_grid.py  make_ae_final_error_density_grid.py  make_ae_ideal_replay_query_paper.py  make_error_budget.py  make_hardware_amplification_contrast_grid.py
scripts/: benchmark_grover_candidates.py
tables/: empirical_error_scaling_fit_metrics.tex
tests/: test_cabiae_scheduler.py  test_cva_grover_optimization.py  test_piecewise_multi_asset_dynamics.py  test_reusable_ae_experiments.py
(+1121 files in other folders)
